# TinyCompiler

./: CMakeLists.txt
examples/: test.c
include/: AST.h  CodeGen.h  Lexer.h  Parser.h  Tokens.h
src/: CodeGen.cpp  Lexer.cpp  Parser.cpp  main.cpp
